implement faqs.html view

--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -322,6 +322,7 @@
             <!-- FAQs column -->
           </div>
           <!-- FAQs row -->
+          <p class="lead white-text-50 mx-auto mt-4 pt-2 mb-5 text-center">Couldn't find an answer to your question? Please contact us at contact [at] soufunstudio.com. You'll have to replace [at] with @.</p>
         </section>
         <!--Section: FAQs-->
       </div>
