implement faqs.html view

--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -175,10 +175,13 @@
           <h3 class="font-weight-bold white-text mb-4 pb-2 text-center">Frequently Asked Questions</h3>
           <hr class="w-header">
           <!-- Section description -->
-          <p class="lead white-text-50 mx-auto mt-4 pt-2 mb-5 text-center">Got a question? We've got answers. If you have some other questions, see our support center.</p>
-          <!-- FAQs row -->
-          <div class="row elegant-color-dark">
-            <!-- FAQs column -->
+          <p class="lead white-text-50 mx-auto mt-4 pt-2 mb-5 text-center">Got a question? We've got answers. If you have some
+            other questions, please contact us at contact [at] soufunstudio.com. You'll have to replace [at] with @.</p>
+
+          <h3 class="font-weight-bold white-text mb-4 pb-2 text-center">About Shopping</h3>
+          <!-- FAQs shopping row -->
+          <div class="row d-flex justify-content-center">
+            <!-- FAQs shopping column -->
             <div class="col-md-12 col-lg-10 mx-auto mb-5">
 
               <!--Accordion wrapper-->
@@ -319,10 +322,157 @@
               </div>
               <!-- Accordion wrapper -->
             </div>
-            <!-- FAQs column -->
+            <!-- FAQs shopping column -->
           </div>
-          <!-- FAQs row -->
-          <p class="lead white-text-50 mx-auto mt-4 pt-2 mb-5 text-center">Couldn't find an answer to your question? Please contact us at contact [at] soufunstudio.com. You'll have to replace [at] with @.</p>
+          <!-- FAQs shopping row -->
+
+          <h3 class="font-weight-bold white-text mb-4 pb-2 text-center">About Projects</h3>
+          <!-- FAQs projects row -->
+          <div class="row d-flex justify-content-center">
+            <!-- FAQs projects column -->
+            <div class="col-md-12 col-lg-10 mx-auto mb-5">
+
+              <!--Accordion wrapper-->
+              <div class="accordion md-accordion" id="accordionEx2" role="tablist" aria-multiselectable="true">
+
+                <!-- Accordion card -->
+                <div class="card border-top border-bottom-0 border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingSeven7">
+                    <a data-toggle="collapse" data-parent="#accordionEx2" href="#collapseSeven7" aria-expanded="true" aria-controls="collapseSeven7">
+                      <h5 class="white-text font-weight-normal mb-0">
+                        How much does the development of a project cost me? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseseven7" class="collapse show" role="tabpanel" aria-labelledby="headingSeven7" data-parent="#accordionEx2">
+                    <div class="card-body teal lighten-3 white-text">
+                      It depends on each project, not all projects have the same difficulty or robustness, so you can request a quote for your project.
+                    </div>
+                  </div>
+                  <!-- Card body -->
+                </div>
+                <!-- Accordion card -->
+
+                <!-- Accordion card -->
+                <div class="card border-bottom-0 border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingEight8">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseEight8" aria-expanded="false" aria-controls="collapseEight8">
+                      <h5 class="white-text font-weight-normal mb-0">
+                        How long does it take to get a quote for my project? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseEight8" class="collapse" role="tabpanel" aria-labelledby="headingEight8" data-parent="#accordionEx2">
+                    <div class="card-body teal lighten-3 white-text">
+                      As previously mentioned, it depends on each project, but in general we can have it in one week for you, since we would not like to
+                      give you an estimate of time and cost "kicking a can", that is, we would not like to just give you a random date without knowing the scope of your project.
+                    </div>
+                  </div>
+                  <!-- Card body -->
+                </div>
+                <!-- Accordion card -->
+
+                <!-- Accordion card -->
+                <div class="card border-bottom-0 border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingNine9">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseNine9" aria-expanded="false" aria-controls="collapseNine9">
+                      <h5 class="white-text font-weight-normal mb-0">
+                        Can I cancel my subscription? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseNine9" class="collapse" role="tabpanel" aria-labelledby="headingNine9" data-parent="#accordionEx2">
+                    <div class="card-body teal lighten-3 white-text">
+                      You can cancel your subscription anytime in your account. Once the subscription is cancelled, you will not be charged next month. You will continue to have access to your account until your current subscription expires.
+                    </div>
+                  </div>
+                  <!-- Card body -->
+                </div>
+                <!-- Accordion card -->
+
+                <!-- Accordion card -->
+                <div class="card border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingTen10">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseTen10" aria-expanded="false" aria-controls="collapseTen10">
+                      <h5 class="white-text font-weight-normal mb-0">
+                        Can I request refund? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseTen10" class="collapse" role="tabpanel" aria-labelledby="headingTen10" data-parent="#accordionEx2">
+                    <div class="card-body teal lighten-3 white-text">
+                      Unfortunately, not. We do not issue full or partial refunds for any reason.
+                    </div>
+                  </div>
+                  <!-- Card body -->
+                </div>
+                <!-- Accordion card -->
+
+                <!-- Accordion card -->
+                <div class="card border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingEleven11">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseEleven11" aria-expanded="false" aria-controls="collapseEleven11">
+                      <h5 class="white-text font-weight-normal mb-0">
+                        What payment services do you support? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseEleven11" class="collapse" role="tabpanel" aria-labelledby="headingEleven11" data-parent="#accordionEx2">
+                    <div class="card-body teal lighten-3 white-text">
+                      We accept all major credit cards.
+                    </div>
+                  </div>
+                  <!-- Card body -->
+                </div>
+                <!-- Accordion card -->
+
+                <!-- Accordion card -->
+                <div class="card border-left border-right border-light">
+
+                  <!-- Card header -->
+                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingTwelve12">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseTwelve12" aria-expanded="false" aria-controls="collapseTwelve12">
+                      <h5 class="white-text font-weight-normal mb-0">
+                        Can I update my card details? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                      </h5>
+                    </a>
+                  </div>
+
+                  <!-- Card body -->
+                  <div id="collapseTwelve12" class="collapse" role="tabpanel" aria-labelledby="headingTwelve12" data-parent="#accordionEx2">
+                    <div class="card-body teal lighten-3 white-text">
+                      Yes. Go to the billing section of your dashboard and update your payment information.
+                    </div>
+                  </div>
+                  <!-- Card body -->
+                </div>
+                <!-- Accordion card -->
+              </div>
+              <!-- Accordion wrapper -->
+            </div>
+            <!-- FAQs projects column -->
+          </div>
+          <!-- FAQs projects row -->
         </section>
         <!--Section: FAQs-->
       </div>
