change anchor href in contact@soufunstudio.com in all footers views

--- a/frontend/commons/terms_of_use.html
+++ b/frontend/commons/terms_of_use.html
@@ -423,7 +423,7 @@
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
             </li>
             <li>
-              <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">contact@soufunstudio.com</a>
+              <a href="mailto:contact@soufunstudio.com">contact@soufunstudio.com</a>
             </li>
             <li>
               <a href="/contact.html">Av. San Francisco Tlaltenco
