--- a/about.html
+++ b/about.html
@@ -247,8 +247,8 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">German Pérez</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
-                        <h6 class="font-weight-bold dark-grey-text small">germanperez@soufunstudio.com</h6>
-                        <p><small class="text-muted">Unity developer</small></p>
+                        <h6><a href="mailto:contact@soufunstudio.com" class="font-weight-bold dark-grey-text small">germanperez@soufunstudio.com</a></h6>
+                        <p><small class=" text-muted">Unity developer</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-1">
                           <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
@@ -627,7 +627,7 @@
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
             </li>
             <li>
-              <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">contact@soufunstudio.com</a>
+              <a href="mailto:contact@soufunstudio.com">contact@soufunstudio.com</a>
             </li>
             <li>
               <a href="contact.html">Av. San Francisco Tlaltenco
