--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -524,7 +524,7 @@
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
             </li>
             <li>
-              <a href="mailto:contact@soufunstudio.com" target="_blank">contact@soufunstudio.com</a>
+              <a href="mailto:contact@soufunstudio.com">contact@soufunstudio.com</a>
             </li>
             <li>
               <a href="/contact.html">Av. San Francisco Tlaltenco
