change anchor href in in mails from about.html view

--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">German Pérez</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
-                        <h6><a href="mailto:contact@soufunstudio.com" class="font-weight-bold dark-grey-text small">germanperez@soufunstudio.com</a></h6>
+                        <h6><a href="mailto:germanperez@soufunstudio.com" class="font-weight-bold dark-grey-text small">germanperez@soufunstudio.com</a></h6>
                         <p><small class=" text-muted">Unity developer</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-1">
@@ -326,7 +326,7 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Roberto Torres</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
-                        <h6 class="font-weight-bold dark-grey-text small">robertotorres@soufunstudio.com</h6>
+                        <h6><a href="mailto:robertotorres@soufunstudio.com" class="font-weight-bold dark-grey-text small">robertotorres@soufunstudio.com</a></h6>
                         <p><small class="text-muted">Unity developer</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-2">
@@ -401,7 +401,7 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Elizabeth Librado</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
-                        <h6 class="font-weight-bold dark-grey-text small">eli.so.12@soufunstudio.com</h6>
+                        <h6><a href="mailto:eli.so.12@soufunstudio.com" class="font-weight-bold dark-grey-text small">eli.so.12@soufunstudio.com</a></h6>
                         <p><small class="text-muted">Graphic Designer</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-3">
@@ -471,7 +471,7 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Keyla Ávila</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
-                        <h6 class="font-weight-bold dark-grey-text small">keylavila@soufunstudio.com</h6>
+                        <h6><a href="mailto:keylavila@soufunstudio.com" class="font-weight-bold dark-grey-text small">keylavila@soufunstudio.com</a></h6>
                         <p><small class="text-muted">SouFUN Graphic Designer and Illustrator</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-4">
@@ -531,7 +531,7 @@
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">Victor Sarabia</h4>
                         <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
-                        <h6 class="font-weight-bold dark-grey-text small">dgsarabia@soufunstudio.com</h6>
+                        <h6><a href="mailto:dgsarabia@soufunstudio.com" class="font-weight-bold dark-grey-text small">dgsarabia@soufunstudio.com</a></h6>
                         <p><small class="text-muted">Multimedia Designer</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn grey-text" data-card="card-5">
