implement faqs.html view

--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -387,7 +387,7 @@
                   <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingNine9">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseNine9" aria-expanded="false" aria-controls="collapseNine9">
                       <h5 class="white-text font-weight-normal mb-0">
-                        Can I cancel my subscription? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                        If for some reason I should cancel the project that is already in development, what's next? <i class="fas fa-angle-down rotate-icon white-text"></i>
                       </h5>
                     </a>
                   </div>
@@ -395,7 +395,9 @@
                   <!-- Card body -->
                   <div id="collapseNine9" class="collapse" role="tabpanel" aria-labelledby="headingNine9" data-parent="#accordionEx2">
                     <div class="card-body teal lighten-3 white-text">
-                      You can cancel your subscription anytime in your account. Once the subscription is cancelled, you will not be charged next month. You will continue to have access to your account until your current subscription expires.
+                      Previously we agree to the start of the project with the guidelines that must be followed by both parties, if for any reason you want to cancel the development,
+                      SouFUN Studio is not responsible for external agents that have caused the cancellation of the development. And therefore the payments that the client must make
+                      until the last day that the project is worked must be met.
                     </div>
                   </div>
                   <!-- Card body -->
@@ -409,7 +411,7 @@
                   <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingTen10">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseTen10" aria-expanded="false" aria-controls="collapseTen10">
                       <h5 class="white-text font-weight-normal mb-0">
-                        Can I request refund? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                        Existe algun acuerdo de privacidad? <i class="fas fa-angle-down rotate-icon white-text"></i>
                       </h5>
                     </a>
                   </div>
@@ -417,51 +419,8 @@
                   <!-- Card body -->
                   <div id="collapseTen10" class="collapse" role="tabpanel" aria-labelledby="headingTen10" data-parent="#accordionEx2">
                     <div class="card-body teal lighten-3 white-text">
-                      Unfortunately, not. We do not issue full or partial refunds for any reason.
-                    </div>
-                  </div>
-                  <!-- Card body -->
-                </div>
-                <!-- Accordion card -->
-
-                <!-- Accordion card -->
-                <div class="card border-left border-right border-light">
-
-                  <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingEleven11">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseEleven11" aria-expanded="false" aria-controls="collapseEleven11">
-                      <h5 class="white-text font-weight-normal mb-0">
-                        What payment services do you support? <i class="fas fa-angle-down rotate-icon white-text"></i>
-                      </h5>
-                    </a>
-                  </div>
-
-                  <!-- Card body -->
-                  <div id="collapseEleven11" class="collapse" role="tabpanel" aria-labelledby="headingEleven11" data-parent="#accordionEx2">
-                    <div class="card-body teal lighten-3 white-text">
-                      We accept all major credit cards.
-                    </div>
-                  </div>
-                  <!-- Card body -->
-                </div>
-                <!-- Accordion card -->
-
-                <!-- Accordion card -->
-                <div class="card border-left border-right border-light">
-
-                  <!-- Card header -->
-                  <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingTwelve12">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseTwelve12" aria-expanded="false" aria-controls="collapseTwelve12">
-                      <h5 class="white-text font-weight-normal mb-0">
-                        Can I update my card details? <i class="fas fa-angle-down rotate-icon white-text"></i>
-                      </h5>
-                    </a>
-                  </div>
-
-                  <!-- Card body -->
-                  <div id="collapseTwelve12" class="collapse" role="tabpanel" aria-labelledby="headingTwelve12" data-parent="#accordionEx2">
-                    <div class="card-body teal lighten-3 white-text">
-                      Yes. Go to the billing section of your dashboard and update your payment information.
+                      Of course we always respect the privacy of our clients' projects, a privacy agreement will be signed in which SouFUN Studio will not disclose any detail of your
+                      project with any entity, or person, unless a government institution requests it under a court order.
                     </div>
                   </div>
                   <!-- Card body -->
