implement faqs.html view

--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -411,7 +411,7 @@
                   <div class="card-header border-bottom z-depth-1 teal lighten-2 border-light" role="tab" id="headingTen10">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapseTen10" aria-expanded="false" aria-controls="collapseTen10">
                       <h5 class="white-text font-weight-normal mb-0">
-                        Existe algun acuerdo de privacidad? <i class="fas fa-angle-down rotate-icon white-text"></i>
+                        Is there a privacy agreement? <i class="fas fa-angle-down rotate-icon white-text"></i>
                       </h5>
                     </a>
                   </div>
