restyle form contact in contact.html view

--- a/contact.html
+++ b/contact.html
@@ -206,14 +206,16 @@
               <form id="contact-form" name="contact-form" action="mail.php" method="post">
                 <!--Card-->
                 <div class="card bg-card wow fadeInRight" data-wow-delay="0.3s">
+                  <!--Header-->
+                  <div class=" card-header card-header-primary text-center">
+                    <h3 class="white-text font-weight-bold">
+                      <i class="fa fa-user white-text"></i> Contact:</h3>
+                    <hr class="hr-light">
+                  </div>
+
                   <!-- Card Body-->
                   <div class="card-body">
-                    <!--Header-->
-                    <div class="text-center">
-                      <h3 class="white-text font-weight-bold">
-                        <i class="fa fa-user white-text"></i> Contact:</h3>
-                      <hr class="hr-light">
-                    </div>
+
                     <!-- Body -->
                     <div class="md-form">
                       <i class="fas fa-user prefix white-text"></i>
