--- a/contact.html
+++ b/contact.html
@@ -205,17 +205,14 @@
               <!-- Form with header -->
               <form id="contact-form" name="contact-form" action="mail.php" method="post">
                 <!--Card-->
-                <div class="card bg-card wow fadeInRight" data-wow-delay="0.3s">
+                <div class="card card-contact bg-card wow fadeInRight" data-wow-delay="0.3s">
                   <!--Header-->
-                  <div class=" card-header card-header-primary text-center">
+                  <div class="card-header card-header-primary text-center">
                     <h3 class="white-text font-weight-bold">
                       <i class="fa fa-user white-text"></i> Contact:</h3>
-                    <hr class="hr-light">
                   </div>
-
                   <!-- Card Body-->
                   <div class="card-body">
-
                     <!-- Body -->
                     <div class="md-form">
                       <i class="fas fa-user prefix white-text"></i>
