--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@
               <!-- Cite -->
               <blockquote class="blockquote">
                 <p class="white-text">Innovation comes from people meeting up in the hallways.</p>
-                <footer class="blockquote-footer mb-3 white-text"><cite title="Source Title">Steve Jobs.</cite></footer>
+                <footer class="blockquote-footer mb-4 white-text"><cite title="Source Title">Steve Jobs.</cite></footer>
               </blockquote>
               <!-- Cite -->
             </div>
@@ -197,7 +197,7 @@
           <!-- Grid row -->
 
           <!-- Grid row -->
-          <div class="row">
+          <div class="row py-2">
 
             <!-- Grid column -->
             <div class="col-lg-5 mb-lg-0 pb-lg-3 mb-4">
