implement faqs.html view

--- a/frontend/info/faqs.html
+++ b/frontend/info/faqs.html
@@ -348,7 +348,7 @@
                   </div>
 
                   <!-- Card body -->
-                  <div id="collapseseven7" class="collapse show" role="tabpanel" aria-labelledby="headingSeven7" data-parent="#accordionEx2">
+                  <div id="collapseSeven7" class="collapse show" role="tabpanel" aria-labelledby="headingSeven7" data-parent="#accordionEx2">
                     <div class="card-body teal lighten-3 white-text">
                       It depends on each project, not all projects have the same difficulty or robustness, so you can request a quote for your project.
                     </div>
