--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <!-- Left -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link waves-effect teal lighten-2 js-scroll-trigger" href="#page-top">Games<span class="sr-only">(current)</span></a>
+              <a class="nav-link waves-effect teal lighten-2 rounded js-scroll-trigger" href="#page-top">Games<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="about.html">About us</a>
