change color in navbar background current page

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
               <a class="nav-link waves-effect" href="store.html">Store</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link waves-effect js-scroll-trigger" href="#page-top">Contact<span class="sr-only">(current)</span></a>
+              <a class="nav-link waves-effect teal lighten-2 rounded js-scroll-trigger" href="#page-top">Contact<span class="sr-only">(current)</span></a>
             </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown">
