--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
               <a class="nav-link waves-effect" href="about.html">About us</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link waves-effect js-scroll-trigger" href="#page-top">Projects<span class="sr-only">(current)</span></a>
+              <a class="nav-link waves-effect teal lighten-2 rounded js-scroll-trigger" href="#page-top">Projects<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="services.html">Services</a>
