--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
               <a class="nav-link waves-effect" href="projects.html">Projects</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link waves-effect js-scroll-trigger" href="#page-top">Services<span class="sr-only">(current)</span></a>
+              <a class="nav-link waves-effect teal lighten-2 rounded js-scroll-trigger" href="#page-top">Services<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="blog.html">Blog</a>
