--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img src="img/brand/soufunlogo-variant-2-icon.png" height="20" width="60" alt="brand">
         </a>
         <!-- Collapse -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Links -->
