changing style cards

--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
             <div class="row d-flex justify-content-center">
 
               <!-- Grid column -->
-              <div class="col-md-4 mb-4">
+              <div class="col-md-4 mb-4 text-center">
 
                 <!-- Rotating card -->
                 <div class="card-wrapper">
