implement about.html view

--- a/about.html
+++ b/about.html
@@ -383,7 +383,7 @@
               <!-- Grid column -->
 
               <!-- Grid column -->
-              <div class="col-md-4 mb-4">
+              <div class="col-md-4 mb-4 text-center">
                 <!-- Rotating card -->
                 <div class="card-wrapper">
                   <div id="card-3" class="card card-rotating text-center">
