--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@
 
                 <!-- Rotating card -->
                 <div class="card-wrapper">
-                  <div id="card-1" class="card card-rotating text-center wow fadeInLeft">
+                  <div id="card-1" class="card card-rotating text-center wow fadeInLeftBig">
                     <!-- Front Side -->
                     <div class="face-front">
                       <!-- Image -->
@@ -386,7 +386,7 @@
               <div class="col-md-4 mb-4 text-center">
                 <!-- Rotating card -->
                 <div class="card-wrapper">
-                  <div id="card-3" class="card card-rotating text-center wow fadeInRight">
+                  <div id="card-3" class="card card-rotating text-center wow fadeInRightBig">
                     <!-- Front Side -->
                     <div class="face-front">
                       <!-- Image -->
@@ -456,7 +456,7 @@
               <div class="col-md-4 mb-4">
                 <!-- Rotating card -->
                 <div class="card-wrapper">
-                  <div id="card-4" class="card card-rotating text-center wow fadeInLeft">
+                  <div id="card-4" class="card card-rotating text-center wow fadeInLeftBig">
                     <!-- Front Side -->
                     <div class="face-front">
                       <!-- Image -->
@@ -516,7 +516,7 @@
               <div class="col-md-4 mb-4">
                 <!-- Rotating card -->
                 <div class="card-wrapper">
-                  <div id="card-5" class="card card-rotating text-center wow fadeInRight">
+                  <div id="card-5" class="card card-rotating text-center wow fadeInRightBig">
                     <!-- Front Side -->
                     <div class="face-front">
                       <!-- Image -->
