--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="col-md-12 mb-4 mb-md-0">
               <!--Image-->
               <div class="view overlay z-depth-1-half">
-                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid fadeIn" alt="photo">
+                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid wow fadeIn" alt="photo">
                 <a class="js-scroll-trigger" href="#page-top">
                   <div class="mask rgba-white-light"></div>
                 </a>
@@ -215,7 +215,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4">
           <!--Card-->
-          <div class="card bounceInLeft">
+          <div class="card wow bounceInLeft">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/xord-icon.jpg" class="img-fluid card-img-top" alt="xord-icon">
@@ -240,7 +240,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card bounceInLeft">
+          <div class="card wow bounceInLeft">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/tpc-icon.jpg" class="img-fluid card-img-top" alt="tpc-icon">
@@ -265,7 +265,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card bounceInLeft">
+          <div class="card wow bounceInLeft">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/inkuneko-icon.jpg" class="img-fluid card-img-top" alt="inkuneko-icon">
@@ -294,7 +294,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4">
           <!--Card-->
-          <div class="card bounceInRight">
+          <div class="card wow bounceInRight">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/uamivr-icon.jpg" class="img-fluid card-img-top" alt="uamivr-icon">
@@ -319,7 +319,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card bounceInRight">
+          <div class="card wow bounceInRight">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/quimiuami-icon.jpg" class="img-fluid card-img-top" alt="quimiuami-icon">
@@ -345,7 +345,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card bounceInRight">
+          <div class="card wow bounceInRight">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/edulandar-icon.jpg" class="img-fluid card-img-top" alt="edulandar-icon">
@@ -385,21 +385,21 @@
         <!-- Grid column -->
         <div class="col-md-6 mt-md-0 mt-3">
           <!-- Content -->
-          <h5 class="text-uppercase flipInX">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
+          <h5 class="text-uppercase wow flipInX">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
           <!-- Grid column -->
           <div class="col-md-12 py-4">
             <div class="mb-5 hoverable-icon">
 
               <!-- Facebook -->
-              <a class="fb-ic rollIn" href="https://www.facebook.com/soufunstudio/" target="_blank">
+              <a class="fb-ic wow rollIn" href="https://www.facebook.com/soufunstudio/" target="_blank">
                 <i class="fab fa-facebook fa-lg mr-md-5 mr-3 fa-2x"></i>
               </a>
               <!-- Twitter -->
-              <a class="tw-ic rollIn" href="https://twitter.com/SouFUNStudio" target="_blank">
+              <a class="tw-ic wow rollIn" href="https://twitter.com/SouFUNStudio" target="_blank">
                 <i class="fab fa-twitter fa-lg mr-md-5 mr-3 fa-2x"></i>
               </a>
               <!-- Instagram -->
-              <a class="ins-ic rollIn" href="https://www.instagram.com/soufunstudio/" target="_blank">
+              <a class="ins-ic wow rollIn" href="https://www.instagram.com/soufunstudio/" target="_blank">
                 <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x"></i>
               </a>
             </div>
@@ -411,7 +411,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase flipInX">Contact Us</h5>
+          <h5 class="text-uppercase wow flipInX">Contact Us</h5>
           <ul class="list-unstyled hoverable-text">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
