--- a/index.html
+++ b/index.html
@@ -385,22 +385,22 @@
         <!-- Grid column -->
         <div class="col-md-6 mt-md-0 mt-3">
           <!-- Content -->
-          <h5 class="text-uppercase wow flipInX">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
+          <h5 class="text-uppercase wow bounceInLeftBig">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
           <!-- Grid column -->
           <div class="col-md-12 py-4">
             <div class="mb-5 hoverable-icon">
 
               <!-- Facebook -->
-              <a class="fb-ic wow rollIn" href="https://www.facebook.com/soufunstudio/" target="_blank">
-                <i class="fab fa-facebook fa-lg mr-md-5 mr-3 fa-2x"></i>
+              <a class="fb-ic" href="https://www.facebook.com/soufunstudio/" target="_blank">
+                <i class="fab fa-facebook fa-lg mr-md-5 mr-3 fa-2x wow rollIn"></i>
               </a>
               <!-- Twitter -->
-              <a class="tw-ic wow rollIn" href="https://twitter.com/SouFUNStudio" target="_blank">
-                <i class="fab fa-twitter fa-lg mr-md-5 mr-3 fa-2x"></i>
+              <a class="tw-ic" href="https://twitter.com/SouFUNStudio" target="_blank">
+                <i class="fab fa-twitter fa-lg mr-md-5 mr-3 fa-2x wow rollIn"></i>
               </a>
               <!-- Instagram -->
-              <a class="ins-ic wow rollIn" href="https://www.instagram.com/soufunstudio/" target="_blank">
-                <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x"></i>
+              <a class="ins-ic" href="https://www.instagram.com/soufunstudio/" target="_blank">
+                <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x wow rollIn"></i>
               </a>
             </div>
           </div>
@@ -411,8 +411,8 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase wow flipInX">Contact Us</h5>
-          <ul class="list-unstyled hoverable-text">
+          <h5 class="text-uppercase wow bounceInRightBig">Contact Us</h5>
+          <ul class="list-unstyled hoverable-text wow fadeInUp">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
             </li>
@@ -430,8 +430,8 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="flipInX">SouFunStudio</h5>
-          <ul class="list-unstyled hoverable-text fadeInUp">
+          <h5 class="wow bounceInRightBig">SouFunStudio</h5>
+          <ul class="list-unstyled hoverable-text wow fadeInUp">
             <li>
               <a href="frontend/commons/privacy_policy.html">Privacy policy</a>
             </li>
