--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="col-md-12 mb-4 mb-md-0">
               <!--Image-->
               <div class="view overlay z-depth-1-half">
-                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid wow fadeIn" alt="photo">
+                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid wow jackInTheBox" alt="photo">
                 <a class="js-scroll-trigger" href="#page-top">
                   <div class="mask rgba-white-light"></div>
                 </a>
@@ -240,7 +240,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card wow bounceInLeft">
+          <div class="card wow bounceInDown">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/tpc-icon.jpg" class="img-fluid card-img-top" alt="tpc-icon">
@@ -265,7 +265,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card wow bounceInLeft">
+          <div class="card wow bounceInRight">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/inkuneko-icon.jpg" class="img-fluid card-img-top" alt="inkuneko-icon">
@@ -294,7 +294,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4">
           <!--Card-->
-          <div class="card wow bounceInRight">
+          <div class="card wow bounceInLeft">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/uamivr-icon.jpg" class="img-fluid card-img-top" alt="uamivr-icon">
@@ -319,7 +319,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
           <!--Card-->
-          <div class="card wow bounceInRight">
+          <div class="card wow bounceInUp">
             <!--Card image-->
             <div class="view overlay zoom">
               <img src="img/icon-game/quimiuami-icon.jpg" class="img-fluid card-img-top" alt="quimiuami-icon">
@@ -385,7 +385,7 @@
         <!-- Grid column -->
         <div class="col-md-6 mt-md-0 mt-3">
           <!-- Content -->
-          <h5 class="text-uppercase wow bounceInLeftBig">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
+          <h5 class="text-uppercase wow bounceInLeft">Connect with us! <i class="fas fa-heart red-text mx-1"></i> </h5>
           <!-- Grid column -->
           <div class="col-md-12 py-4">
             <div class="mb-5 hoverable-icon">
@@ -411,7 +411,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="text-uppercase wow bounceInRightBig">Contact Us</h5>
+          <h5 class="text-uppercase wow bounceInRight">Contact Us</h5>
           <ul class="list-unstyled hoverable-text wow fadeInUp">
             <li>
               <a href="https://web.whatsapp.com" target="_blank"><i class="fas fa-phone-alt"></i> +521 5515990967</a>
@@ -430,7 +430,7 @@
         <!-- Grid column -->
         <div class="col-md-3 mb-md-0 mb-3">
           <!-- Links -->
-          <h5 class="wow bounceInRightBig">SouFunStudio</h5>
+          <h5 class="wow bounceInRight">SouFunStudio</h5>
           <ul class="list-unstyled hoverable-text wow fadeInUp">
             <li>
               <a href="frontend/commons/privacy_policy.html">Privacy policy</a>
