--- a/index.html
+++ b/index.html
@@ -455,14 +455,14 @@
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3 list-unstyled">
       <ul class="list-inline hoverable-text">
-        <li class="list-inline-item">
-          <a class="wow bounceInUp" href="http://soufunstudio.com">© 2020 Copyright: soufunstudio.com</a>
+        <li class="list-inline-item wow bounceInUp">
+          <a href="http://soufunstudio.com">© 2020 Copyright: soufunstudio.com</a>
         </li>
         <li class="list-inline-item">
           <img src="img/brand/soufun-solid-logo.png" class="img-fluid wow rotateIn" alt="soufun-solid-logo"></a>
         </li>
-        <li class="list-inline-item">
-          <a class="wow bounceInUp" href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">Sen font is licensed under the OFL.</a>
+        <li class="list-inline-item wow bounceInUp">
+          <a href="https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL" target="_blank">Sen font is licensed under the OFL.</a>
         </li>
       </ul>
     </div>
